# NetworkLib

./: README.md
App/: CMakeLists.txt  main.cpp
NetworkLib/: CMakeLists.txt
NetworkLib/include/: Server.h  client.h
NetworkLib/src/: Server.cpp  client.cpp
